--- a/src/styles/custom-base-styles.scss
+++ b/src/styles/custom-base-styles.scss
@@ -1,39 +1,42 @@
+@import url('https://rsms.me/inter/inter.css');
+html { font-family: 'Inter', sans-serif; }
+@supports (font-variation-settings: normal) {
+  html { font-family: 'Inter var', sans-serif; }
+}
+
 // Custom Base Styles
 
-// html,
-// body {
-//   height: 100%;
-//   margin: 0;
-//   padding: 0;
-//   font-family: 'Inter', sans-serif;
-// }
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  font-family: 'Inter', sans-serif;
+}
 
-// pre, code, .font-mono { 
-//   font-variant: common-ligatures tabular-nums;
-// }
+pre, code, .font-mono { 
+  font-variant: common-ligatures tabular-nums;
+  font-feature-settings: 'tnum';
+}
 
-// :root {
-//   --bg-color: theme('colors.grey-lighter');
-//   --text-color: theme('colors.black');
-//   --heading-color: theme('colors.blue-dark');
-//   --link-color: theme('colors.blue');
-
-//   --filter-dim: brightness(50%);
-//   --filter-bright: brightness(150%);
-// }
-
-// [data-theme='dark'] {
-//   --bg-color: theme('colors.black');
-//   --heading-color: theme('colors.white');
-//   --text-color: theme('colors.white');
-// }
-
-// @mixin pagestyle {
-//   background-color: var(--bg-color);
-//   color: var(--text-color);
-
-//   a, button { cursor: pointer; }
-//   a, .link { color: var(--link-color) }
-// }
-
-// html { @include pagestyle }
+h1, h2, h3, h4, h5, h6 {
+  @apply font-semibold
+}
+h1 {
+  @apply text-4xl
+}
+h2 {
+  @apply text-3xl
+}
+h3 {
+  @apply text-2xl
+}
+h4 {
+  @apply text-xl
+}
+h5 {
+  @apply text-lg
+}
+h6 {
+  @apply text-base
+}
