--- a/docs/docs.styles.scss
+++ b/docs/docs.styles.scss
@@ -79,8 +79,7 @@ div[class^="rsg--docs"],
 p[class^="rsg--para"],
 h3[class^="rsg--heading"],
 h4[class^="rsg--heading"] {
-  max-width: 800px;
-  width: 75%;
+  max-width: 100%;
   p[class^="rsg--para"] {
     width: 100%;
   }
