--- a/src/styles/custom-base-styles.scss
+++ b/src/styles/custom-base-styles.scss
@@ -12,12 +12,10 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Inter', sans-serif;
-  @apply bg-light-4 text-dark-2 border-light-3;
+  @apply bg-light-4 text-dark-2 border-light-3 transition-colors ease-in-out duration-1000;
 }
 
-.theme-dark-mode {
-  @apply bg-dark-0 text-white border-dark-4;
-}
+*:focus { @apply outline-none shadow-outline }
 
 pre, code, .font-mono { 
   font-variant: common-ligatures tabular-nums;
@@ -27,21 +25,23 @@ pre, code, .font-mono {
 h1, h2, h3, h4, h5, h6 {
   @apply font-semibold
 }
-h1 {
-  @apply text-4xl
+h1 { @apply text-4xl }
+h2 { @apply text-3xl }
+h3 { @apply text-2xl }
+h4 { @apply text-xl }
+h5 { @apply text-lg }
+h6 { @apply text-md }
+
+.bg-card {
+  @apply bg-light-6;
+  &.bg-card-hover:hover { @apply bg-white }
 }
-h2 {
-  @apply text-3xl
-}
-h3 {
-  @apply text-2xl
-}
-h4 {
-  @apply text-xl
-}
-h5 {
-  @apply text-lg
-}
-h6 {
-  @apply text-md
+
+.theme-dark-mode {
+  @apply bg-dark-0 text-white border-dark-4;
+
+  .bg-card {
+    @apply bg-dark-2;
+    &.bg-card-hover:hover { @apply bg-dark-3 }
+  }
 }
