--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -56,7 +56,7 @@
 .text-disabled { @apply text-light-2 }
 .text-active { @apply text-blue-1 }
 .text-action {
-  @apply text-blue-1 cursor-pointer;
+  @apply cursor-pointer;
   &:hover, &:focus { @apply text-blue-2 }
   &:active { @apply text-blue-3 }
 }
@@ -99,7 +99,6 @@
   .text-disabled { @apply text-light-0 }
   .text-active { @apply text-blue-3 }
   .text-action {
-    @apply text-blue-3;
     &:hover, &:focus { @apply text-blue-4 }
     &:active { @apply text-blue-5 }
   }
