feat: add autocomplete and icons to inputs

--- a/src/styles/utilities.scss
+++ b/src/styles/utilities.scss
@@ -1,5 +1,6 @@
 // Custom CSS Utilities
 .bg-inherit { background: inherit; }
+.text-inherit { color: inherit; }
 .colors-transition { @apply transition-colors duration-200 ease-in-out }
 
 
